@@ -39,7 +39,6 @@ public class VUInt32Parameter extends VectorParameter
 	    this.values.add(new Long(i));
 	    this.isHex.add(new Boolean(false));
 	}
-	isValueSet = (values.size()>0);
     }
     
     /** constructor from a string */
@@ -72,15 +71,13 @@ public class VUInt32Parameter extends VectorParameter
     public String valueAsString()
     {
 	String result = new String();
-	if (isValueSet) {
-	    for (int i=0;i<values.size();i++) {
-		result += (isHex.get(i)) ?
-		    "0x"+Long.toHexString(values.get(i)) :
-		    values.get(i).toString();
-		result += ", ";
-	    }
-	    result = result.substring(0,result.length()-2);
+	for (int i=0;i<values.size();i++) {
+	    result += (isHex.get(i)) ?
+		"0x"+Long.toHexString(values.get(i)) :
+		values.get(i).toString();
+	    result += ", ";
 	}
+	if (values.size()>0) result = result.substring(0,result.length()-2);
 	return result;
     }
 
@@ -90,7 +87,7 @@ public class VUInt32Parameter extends VectorParameter
 	values.clear();
 	isHex.clear();
 	if (valueAsString==null||valueAsString.length()==0) {
-	    isValueSet = false;
+	    return true;
 	}
 	else {
 	    try {
@@ -111,7 +108,6 @@ public class VUInt32Parameter extends VectorParameter
 			this.isHex.add(new Boolean(false));
 		    }
 		}
-		isValueSet = true;
 	    }
 	    catch (NumberFormatException e) {
 		System.err.println("VUInt32Parameter.setValue " +
@@ -156,7 +152,6 @@ public class VUInt32Parameter extends VectorParameter
     public Object removeValue(int i)
     {
 	Object result = values.remove(i);
-	isValueSet = (values.size()>0);
 	return result;
     }
  
